<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.android.helloandroid.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="@bool/button_parent_Right"
            android:layout_alignParentTop="@bool/button_parent_top"
            android:layout_marginRight="@dimen/buttondistance_from_rightmargin"
            android:fontFamily="@font/roboto"
            android:padding="@dimen/buttonpadding_size"
            android:text="@string/button"
            android:textSize="@dimen/buttonfont_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/udacityindex" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/firsttext_marginTop"
                android:fontFamily="@font/roboto"
                android:text="@string/Udacity_text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:paddingTop="@dimen/textview_paddingTop"
                android:text="@string/address1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto"
                android:text="@string/address2"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/phoneno_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autoLink="phone"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/textview_minutepadding"
                android:text="@string/phone_no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/web_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:autoLink="web"
                android:fontFamily="@font/roboto"
                android:text="@string/web"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/webfont_size" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
